<?xml version="1.0" encoding="utf-8"?>
<!-- Exclave Next: actions for the profiles currently checked (selected) in a
     group list. They operate on the checked set ONLY; when nothing is checked
     showSelectionMenu() greys them out instead of letting them run against the
     whole group. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all" />
    <item
        android:id="@+id/action_select_none"
        android:title="@string/action_select_none" />
    <item
        android:id="@+id/action_selection_url_test"
        android:title="@string/connection_test_url_test" />
    <item
        android:id="@+id/action_selection_speed_test"
        android:title="@string/action_speed_test" />
    <item
        android:id="@+id/action_selection_annotate_geoip"
        android:title="@string/action_annotate_geoip" />
    <item
        android:id="@+id/action_selection_resolve_domains"
        android:title="@string/action_resolve_domains" />
    <item
        android:id="@+id/action_selection_deduplicate"
        android:title="@string/deduplication" />
    <item
        android:id="@+id/action_selection_delete_unavailable"
        android:title="@string/connection_test_delete_unavailable" />
    <item
        android:id="@+id/action_selection_advanced"
        android:title="@string/action_advanced">
        <menu>
            <item
                android:id="@+id/action_selection_clear_test_results"
                android:title="@string/connection_test_clear_results" />
            <item
                android:id="@+id/action_selection_clear_traffic"
                android:title="@string/clear_traffic_statistics" />
        </menu>
    </item>
    <item
        android:id="@+id/action_selection_share"
        android:title="@string/action_selection_share" />
    <item
        android:id="@+id/action_selection_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/action_selection_exit"
        android:title="@string/action_selection_exit" />

</menu>
