<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="subscriptionSourceName"
        app:title="@string/subscription_source_name"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.SimpleMenuPreference
        app:entries="@array/subscription_types"
        app:entryValues="@array/subscription_types_value"
        app:icon="@drawable/ic_baseline_nfc_24"
        app:key="subscriptionType"
        app:singleLineTitle="false"
        app:title="@string/subscription_type"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.LinkOrContentPreference
        app:icon="@drawable/ic_baseline_link_24"
        app:key="subscriptionLink"
        app:title="@string/group_subscription_link"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:dialogLayout="@layout/layout_password_dialog"
        app:icon="@drawable/ic_settings_password"
        app:key="subscriptionAgePrivateKey"
        app:title="@string/ssh_private_key"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:icon="@drawable/ic_baseline_import_contacts_24"
        app:key="subscriptionDeduplication"
        app:summary="@string/deduplication_sum"
        app:title="@string/deduplication" />

    <EditTextPreference
        app:icon="@drawable/ic_action_delete"
        app:key="subscriptionNameFilter"
        app:title="@string/regular_expression_filter"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:icon="@drawable/ic_baseline_manage_search_24"
        app:key="subscriptionNameFilter1"
        app:title="@string/regular_expression_filter1"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        app:key="subscriptionUpdate"
        app:title="@string/update_settings">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="subscriptionUpdateWhenConnectedOnly"
            app:summary="@string/update_when_connected_only_sum"
            app:title="@string/update_when_connected_only" />
        <io.nekohasekai.sagernet.widget.UserAgentPreference
            app:icon="@drawable/ic_baseline_grid_3x3_24"
            app:key="subscriptionUserAgent"
            app:title="@string/subscription_user_agent"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_texture_24"
            app:key="subscriptionHTTPHeaders"
            app:title="@string/extra_headers"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="subscriptionAutoUpdate"
            app:title="@string/auto_update" />
        <EditTextPreference
            app:defaultValue="1440"
            app:icon="@drawable/ic_baseline_timelapse_24"
            app:key="subscriptionAutoUpdateDelay"
            app:title="@string/auto_update_delay"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
