<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_provider"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/geoip_add_provider"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_add_mmdb_country"
                android:title="@string/geoip_add_country_db" />
            <item
                android:id="@+id/action_add_mmdb_asn"
                android:title="@string/geoip_add_asn_db" />
            <item
                android:id="@+id/action_add_mmdb_custom"
                android:title="@string/geoip_add_custom_db" />
            <item
                android:id="@+id/action_add_api"
                android:title="@string/geoip_type_api" />
        </menu>
    </item>

</menu>
