<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="groupName"
        app:title="@string/group_name"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.SimpleMenuPreference
        app:defaultValue="0"
        app:entries="@array/group_orders"
        app:entryValues="@array/int_array_3"
        app:icon="@drawable/ic_baseline_low_priority_24"
        app:key="groupOrder"
        app:singleLineTitle="false"
        app:title="@string/group_order"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.ReselectableSimpleMenuPreference
        app:icon="@drawable/ic_hardware_router"
        app:entries="@array/front_landing_proxy_entry"
        app:entryValues="@array/front_landing_proxy_value"
        app:key="groupFrontProxy"
        app:singleLineTitle="false"
        app:title="@string/front_proxy" />

    <io.nekohasekai.sagernet.widget.ReselectableSimpleMenuPreference
        app:icon="@drawable/baseline_public_24"
        app:entries="@array/front_landing_proxy_entry"
        app:entryValues="@array/front_landing_proxy_value"
        app:key="groupLandingProxy"
        app:singleLineTitle="false"
        app:title="@string/landing_proxy" />

    <Preference
        app:icon="@drawable/ic_baseline_link_24"
        app:key="groupSubscriptionSources"
        app:singleLineTitle="false"
        app:title="@string/subscription_sources"
        app:summary="@string/subscription_sources_summary" />

</PreferenceScreen>
